Update session modes and tool card rendering